# dna-replication

./: CMakeLists.txt  DNA Replication Plots.ipynb  README.md
Data/G1_constraint_100/: G1_constraint_032.csv  G1_constraint_055.csv  G1_constraint_069.csv  G1_constraint_085.csv  G1_constraint_094.csv  G1_constraint_104.csv  G1_constraint_135.csv  G1_constraint_183.csv  G1_constraint_194.csv  G1_constraint_196.csv  G1_constraint_197.csv  G1_constraint_213.csv  G1_constraint_218.csv  G1_constraint_222.csv  G1_constraint_238.csv  G1_constraint_242.csv  G1_constraint_244.csv  G1_constraint_247.csv  G1_constraint_266.csv  G1_constraint_278.csv  G1_constraint_291.csv  G1_constraint_328.csv  G1_constraint_334.csv  G1_constraint_346.csv  G1_constraint_353.csv  G1_constraint_357.csv  G1_constraint_362.csv  G1_constraint_365.csv  G1_constraint_386.csv  G1_constraint_394.csv  G1_constraint_404.csv  G1_constraint_409.csv  G1_constraint_411.csv  G1_constraint_413.csv  G1_constraint_414.csv  G1_constraint_417.csv  G1_constraint_420.csv  G1_constraint_424.csv  G1_constraint_429.csv  G1_constraint_435.csv  (+6 more)
Data/G1_grand_selected/: G1_grand_013_0.csv  G1_grand_020_0.csv  G1_grand_025_0.csv  G1_grand_029_1.csv  G1_grand_040_0.csv  G1_grand_041_0.csv  G1_grand_051_0.csv  G1_grand_062_0.csv  G1_grand_065_0.csv  G1_grand_071_0.csv  G1_grand_078_0.csv  G1_grand_094_0.csv  G1_grand_095_0.csv  G1_grand_105_2.csv  G1_grand_124_5.csv  G1_grand_179_1.csv  G1_grand_180_2.csv  G1_grand_183_1.csv  G1_grand_219_1.csv  G1_grand_249_0.csv  G1_grand_251_0.csv  G1_grand_262_0.csv  G1_grand_264_1.csv  G1_grand_284_0.csv  G1_grand_290_1.csv  G1_grand_308_0.csv  G1_grand_329_0.csv  G1_grand_343_0.csv  G1_grand_346_0.csv  G1_grand_360_0.csv  G1_grand_365_0.csv  G1_grand_408_0.csv  G1_grand_417_0.csv  G1_grand_440_0.csv  G1_grand_466_1.csv  (+33 more)
animations/: README.md
simulation results/: README.md
simulation results /: README.md
src/: Chromosome.cpp  Chromosome.h  Origin.cpp  Origin.h  Particle.cpp  Particle.h  ParticleActivationBehavior.h  ParticleBindingBehavior.h  ParticleDiffusionBehavior.h  Simulation.cpp  Simulation.h  SimulationBatchClient.cpp  SimulationClient.cpp  SimulationObserver.h
(+135 files in other folders)
